# cast-platform-tools

./: .gitignore  README.md  pyproject.toml
issues/requirements/: REQ-002.md
src/cast_platform_tools/: __init__.py  client.py  create_agent.py  dm.py  follow_user.py  like_post.py  post.py
tests/: conftest.py  test_create_agent.py  test_follow_user.py  test_like_post.py  test_post.py  test_registration.py  test_send_dm.py
