[project]
name = "cast-platform-tools"
version = "0.1.0"
description = "cast 平台 (小红书 fake) 业务 agent 工具集 · 包装 cast-api endpoint 成 LLM-callable tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akong-agent-harness @ git+https://github.com/yarnovo/akong-agent-harness.git@main",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cast_platform_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
